# ComfyUI-Step_Audio_EditX_TTS-PR

./: README.md  __init__.py  pyproject.toml  requirements.txt
core/: model_manager.py  utils.py
nodes/: step_audio_clone_node.py  step_audio_edit_node.py
step_audio_impl/: app.py  model_loader.py  step_audio_utils.py  tokenizer.py  tts.py
step_audio_impl/funasr_detach/train_utils/: average_nbest_models.py  load_pretrained_model.py  trainer.py
step_audio_impl/funasr_detach/utils/: prepare_data.py
