[project]
name = "comfyui-step-audio-editx-tts"
description = "Professional voice cloning and audio editing node for ComfyUI using Step Audio EditX"
version = "1.0.4"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers==4.53.0",
    "numpy>=1.24.0",
    "onnxruntime-gpu>=1.20.0",
    "funasr>=1.1.3",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "hyperpyyaml>=1.2.2"
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-Step_Audio_EditX_TTS"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "Step Audio EditX TTS"
Icon = "https://avatars.githubusercontent.com/u/84208527"
